# simple-prices

./: Cargo.toml  readme.md
src/: main.rs
